<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_off"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:text="@string/off" />

    <TextView
        android:id="@+id/text_view_on"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:text="@string/on" />

    <TextView
        android:id="@+id/text_view_system"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:text="@string/system" />
</LinearLayout>
