<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/daily_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_no_image"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/select_hd_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/hd"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="96dp"
            android:hint="@string/search_wiki"
            app:boxBackgroundColor="@android:color/darker_gray"
            app:boxCornerRadiusTopStart="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_broken_image"
            app:errorTextColor="@android:color/holo_orange_dark"
            app:helperText="@string/wiki_helper_text"
            app:hintTextColor="@android:color/holo_green_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text_wiki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/description_bottom_sheet" />
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        app:backgroundTint="?colorPrimary"
        app:fabAlignmentMode="end"
        app:fabCradleVerticalOffset="@dimen/cardview_compat_inset_shadow"
        app:navigationIcon="@drawable/ic_hamburger" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorAccent"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_add"
        app:tint="#FFFFFF" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
